@@ -16,6 +16,7 @@
  380429 References: header gets lost when superseding an article.
  380902 Setting 'work offline' doesn't go offline if busy downloading
  350999 Switching header threading collapses threads, loses selection
+ 353556 make underline and bold conversion more sensible
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
